# VolgaKernel

./: CMakeLists.txt  import.cmake
cmake/: options.cmake  toolchain.cmake
cmake/Platform/: VolgaOS-Clang-CXX.cmake  VolgaOS-Clang.cmake  VolgaOS.cmake
kernel/: CMakeLists.txt
kernel/include/: bootinfo.hpp
kernel/include/common/: attributes.hpp  types.hpp
kernel/include/debug/: serial.hpp
kernel/include/x86/: cpu.hpp  io.hpp
kernel/src/: init.cpp
libk/: CMakeLists.txt
libk/include/: dlltest.hpp  string.hpp
libk/include/common/: attributes.hpp  types.hpp
libk/include/debug/: serial.hpp
libk/include/vlg/: printf.hpp  string_view.hpp
libk/include/x86/: gdt.hpp
libk/src/: dlltest.cpp
libk/src/debug/: serial.cpp
libk/src/vlg/: printf.cpp  string_view.cpp
libk/src/x86/: gdt.cpp
sysinit/: CMakeLists.txt
sysinit/include/: sysinit.hpp
sysinit/src/: bootinfo.hpp  sysinit.cpp
